# Tipsoi_MCP

./: .gitignore  README.md  Tipsoi Agent.md  agentic_future.md  pyproject.toml  render.yaml
gemini_gataway_for_FF_deviceTipsoiAI/tipsoi-support-mcp/: DEPLOY.md  README.md  pyproject.toml  render.yaml
gemini_gataway_for_FF_deviceTipsoiAI/tipsoi-support-mcp/gateway/: .env.example  app.py  ratelimit.py
gemini_gataway_for_FF_deviceTipsoiAI/tipsoi-support-mcp/tipsoi_support_mcp/: gemini_interop.py  kb.py
gemini_gataway_for_FF_deviceTipsoiAI/tipsoi-support-mcp/tipsoi_support_mcp/kb_docs/00-cornerstone/: official-faq-bilingual.md
gemini_gataway_for_FF_deviceTipsoiAI/tipsoi-support-mcp/tipsoi_support_mcp/kb_docs/04-payroll/: payroll-processing.md
gemini_gataway_for_FF_deviceTipsoiAI/tipsoi-support-mcp/tipsoi_support_mcp/kb_docs/06-shift-management/: shift-swaps-and-changes.md
mcp_demo1/: .env.example  Dockerfile
mcp_demo1/tipsoi_mcp/: __init__.py
redundant_version_control/tipsoi-support-mcp/: .env.example  pyproject.toml
redundant_version_control/tipsoi-support-mcp-e/: .env.example  Dockerfile
redundant_version_control/tipsoi-support-mcp-ec/: GUIDE.md  START_HERE.md  USAGE.md
redundant_version_control/tipsoi-support-mcp-fastapi-ffai/: GUIDE.md
refs/: MCP.md  Tipsoi HRM Complete API.postman_collection (2).json  Tipsoi.md  claude_desktop_config.json
tipsoi-support-mcp/: .gitignore  GUIDE.md  README.md
tipsoi-support-mcp-fastapi-ffai/: .gitignore  README.md
tipsoi_mcp/: __init__.py  client.py  dates.py  oauth_routes.py  server.py  token_store.py
(+61 files in other folders)
