[project]
name = "tipsoi-mcp"
version = "0.3.0"
description = "MCP server for the Tipsoi HRM API (read reports + leave write tools, per-user OAuth)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
tipsoi-mcp = "tipsoi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tipsoi_mcp"]
